update perf task