@@ -170,6 +170,16 @@ subprojects {
 
         enableAssertions = false
         jvmArgs('-Djvm.resource.tracing=false')
+        jvmArgs('-Ddisable.thread.safety=true')
+
+        if (JavaVersion.current().isJava9Compatible()) {
+            jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+            jvmArgs('--add-opens', 'java.base/java.net=ALL-UNNAMED')
+            jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+            jvmArgs('--add-opens', 'java.base/jdk.internal.ref=ALL-UNNAMED')
+            jvmArgs('--add-opens', 'java.base/java.util.zip=ALL-UNNAMED')
+            jvmArgs('--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED')
+        }
 
         useJUnitPlatform {
             includeTags 'perf'
